--- a/adventure-cards.css
+++ b/adventure-cards.css
@@ -6,6 +6,7 @@ section[id="Set Sail for Adventure"] {
     align-items: center;
     padding: 4rem 0;
     min-height: 100vh;
+    background: white;
 }
 
 section[id="Set Sail for Adventure"] .title {
